--- a/shared/scss/front/custom.scss
+++ b/shared/scss/front/custom.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Nothing+You+Could+Do&display=swap');
+
 @import "./variables";
 
 @import "./../../../node_modules/bootstrap/scss/bootstrap";
