--- a/shared/styles/front/custom.css
+++ b/shared/styles/front/custom.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Nothing+You+Could+Do&display=swap"); /*!
+@import url("https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap");
+@font-face {
+  font-family: "Montserrat";
+  src: url("./../../fonts/Montserrat/Montserrat-Regular.ttf"), url("./../../fonts/Montserrat/Montserrat-Medium.ttf"), url("./../../fonts/Montserrat/Montserrat-Bold.ttf");
+}
+/*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
  * Copyright 2011-2018 Twitter, Inc.
@@ -9032,9 +9037,10 @@ body {
   background-color: #0E0E0E;
   width: 100%;
   min-height: 100vh;
-  color: rgb(230, 230, 230);
   font-family: "Montserrat", sans-serif;
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 0.938rem;
+  color: rgb(210, 210, 210);
 }
 body .icon.loading::before {
   animation-name: rotateCircle;
@@ -9049,12 +9055,19 @@ body .icon.loading::before {
     transform: rotateZ(360deg);
   }
 }
+body .btn {
+  font-size: 0.938rem;
+  border-radius: 1.5rem;
+  padding: 0.6666666667rem 1.5rem;
+}
 
 .header {
   width: 100%;
   max-width: 95px;
   height: 100vh;
   padding: 12px;
+  position: fixed;
+  z-index: 99;
 }
 .header .header-inner {
   width: 100%;
@@ -9135,15 +9148,234 @@ body .icon.loading::before {
 }
 
 .main {
-  background-image: url(./../../images/background.jpg);
+  width: calc(100% - 95px);
+  min-height: 100vh;
+  margin-left: 95px;
+}
+
+.section {
+  width: 100%;
+  min-height: 100vh;
+  position: relative;
+  z-index: 1;
+  padding: 5rem 0;
+}
+.section::before, .section::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.section::before {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
-  height: 100vh;
+  z-index: 1;
 }
-.main .main-inner {
+.section::after {
+  z-index: 2;
+}
+.section .section-inner {
+  display: flex;
+  align-items: center;
   height: 100%;
+  position: relative;
+  z-index: 3;
+}
+
+.slide::before {
+  background-image: url(./../../images/background.jpg);
+}
+.slide .slide-inner .suptitle {
+  font-family: "Nothing You Could Do";
+  font-size: 1.2rem;
+  border-left: 0.625rem solid #437EA8;
+  padding-left: 0.9375rem;
+  padding-top: 0.4166666667rem;
+}
+.slide .slide-inner .title {
+  font-size: 1.4rem;
+}
+.slide .slide-inner .buttons {
+  text-align: center;
+}
+.slide .slide-inner .buttons .btn {
+  margin-right: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.skill::before {
+  background-image: url(./../../images/background_2.png);
+  z-index: 2;
+}
+.skill::after {
+  z-index: 1;
+}
+.skill .skill-inner .title,
+.skill .skill-inner .subtitle {
+  font-weight: 600;
+}
+.skill .skill-inner .title {
+  font-size: 1.4rem;
+}
+.skill .skill-inner .subtitle {
+  font-size: 1rem;
+}
+.skill .skill-inner .subtitle-2 {
+  font-weight: 500;
+}
+.skill .skill-inner .skill-list {
+  list-style: none;
+  padding: 0 0 0 1.1rem;
+  margin: 0;
+  position: relative;
+}
+.skill .skill-inner .skill-list::before {
+  content: "";
+  background-color: #437EA8;
+  width: 0.625rem;
+  height: 100%;
+  border-radius: 0.1875rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.skill .skill-inner .skill-list .skill-list-item {
+  background-color: #2D373F;
+  position: relative;
+  padding: 0.25rem 1rem;
+  margin-bottom: 0.5rem;
+  border-radius: 0.375rem;
+}
+.skill .skill-inner .skill-list .skill-list-item .percent {
+  height: 100%;
+  background-color: #437EA8;
+  padding: 0.25rem 1rem;
+  border-radius: 0.375rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.skill .skill-inner .skill-list .skill-list-item .text {
+  position: relative;
+  z-index: 2;
+}
+.skill .skill-inner .buttons .btn {
+  margin-right: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.portfolio .portfolio-inner .title {
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding-bottom: 1rem;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item {
+  transition-duration: 0.375s;
+  overflow: hidden;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner {
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.75rem;
+  text-align: center;
+  cursor: pointer;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner .img-fluid {
+  opacity: 0.9;
+  border-radius: 0.75rem;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner .project-info {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  border-radius: 0.75rem;
+  padding: 0.6666666667rem;
+  text-align: center;
+  margin: 0 0.5rem;
+  display: none;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner .project-info a {
+  color: rgb(210, 210, 210);
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner .project-info a:hover {
+  text-decoration: none;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner .project-info a .title {
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner .project-info a .description {
+  margin-bottom: 0;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner:hover {
+  transition-duration: 0.375s;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner:hover .img-fluid {
+  opacity: 1;
+}
+.portfolio .portfolio-inner .projects-list .projects-list-item .inner:hover .project-info {
+  display: block;
+  animation-name: projectinfoanimation;
+  animation-duration: 0.375s;
+  animation-iteration-count: 1;
+  cursor: default;
+}
+@keyframes projectinfoanimation {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+@media (min-width: 562px) {
+  .slide .slide-inner .suptitle {
+    font-size: 1.363rem;
+  }
+  .slide .slide-inner .title {
+    font-size: 2rem;
+  }
+  .slide .slide-inner .buttons {
+    text-align: left;
+  }
+}
+@media (min-width: 768px) {
+  .section .section-inner {
+    padding: 0 1rem;
+  }
+  .slide .slide-inner .suptitle {
+    font-size: 1.463rem;
+  }
+  .slide .slide-inner .title {
+    font-size: 2.4rem;
+  }
+}
+@media (min-width: 992px) {
+  .section .section-inner {
+    padding: 0 1.5rem;
+  }
+  .slide .slide-inner .suptitle {
+    font-size: 1.563rem;
+  }
+  .slide .slide-inner .title {
+    font-size: 2.6rem;
+  }
+}
+@media (min-width: 1200px) {
+  .section .section-inner {
+    padding: 0 2rem;
+  }
+  .slide .slide-inner .title {
+    font-size: 3rem;
+  }
 }
 
 /*# sourceMappingURL=custom.css.map */
